# dj-project

./: .env.example  .env.full  .env.local  .gitignore  CADDY_INFO.md  DJANGO_5_UPGRADE.md  DOCKER_PROFILES_GUIDE.md  Makefile  POETRY_SETUP.md  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/todos/: admin.py  models.py  serializers.py  tasks.py  tests.py  views.py
frontend/: Caddyfile  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: TodoForm.js  TodoItem.js  TodoList.js
frontend/src/services/: api.js
frontend/src/styles/: App.css
